--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -19,7 +22,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>React App</title>
+    <title>DG Bar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
